--- a/src/index.css
+++ b/src/index.css
@@ -69,7 +69,46 @@ nav li:hover {
   color: white;
 }
 
-footer {
+.user {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 0.5rem;
+}
+.user > a {
+  color: white;
+  background: rgb(79, 127, 143);
+  cursor: pointer;
+  padding: 0.5rem 2rem;
+  border-radius: 20px;
+}
+.user > span {
+  font-size: 1.7rem;
+  color: white;
+  background: rgb(79, 127, 143);
+  cursor: pointer;
+  padding: 0.5rem 2rem;
+  border-radius: 20px;
+}
+
+.user-detail {
+  background-color: rgb(75, 75, 75);
+  padding: 2rem;
+}
+.user-detail h3,
+.user-detail h4 {
+  font-size: 2rem;
+  color: white;
+  text-align: center;
+}
+.user-detail a {
+  color: rgb(114, 201, 255);
+  border: 2px solid rgb(114, 201, 255);
+  padding: 0.5rem 2rem;
+  border-radius: 20px;
+}
+
+/* footer {
   position: absolute;
   width: 100%;
   bottom: 0;
@@ -80,4 +119,4 @@ footer p {
   font-size: 2rem;
   color: rgb(178, 237, 255);
   text-align: center;
-}
+} */
